lib/tests/fixtures/compiler/evaluation/if_in_type_spec.pp
type Invalid = Integer[if foo {} elsif bar {} else {}]
